--- a/styles/style.css
+++ b/styles/style.css
@@ -9,11 +9,12 @@
     font-family: 'Poppins', sans-serif;
  }
 
- .container{
+ main{
      width: 1440px;
-     padding-bottom: 86px;
-     background-color: #2D25A0;
+     
+     
  }
+ 
  .fixed-width{
      width: 1160px;
      margin: auto;
@@ -46,6 +47,12 @@
 
 
  /* Header css */
+header{
+    background-color: #2D25A0;
+    padding-bottom: 86px;
+    margin-bottom: 70px;
+}
+
  .menu{
      display: flex;
      justify-content: space-between;
@@ -127,4 +134,54 @@
  .banner .banner-image img{
      width: 556px;
      height: 438px;
+ }
+
+ /* Player section css starts */
+
+ .player-section{
+     
+ }
+
+ .players{
+     display: grid;
+     grid-template-columns: repeat(3, 1fr);
+     grid-row-gap: 40px;
+     background-color: #FFFFFF;
+     width: 1160px;
+     margin: auto;
+ }
+ .player{
+     width: 330px;
+     height: 474px;
+     padding: 15px;
+     border: 1px solid #FFFFFF;
+     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+     box-sizing: border-box;
+ }
+ .player .player-image{
+     text-align: center;
+ }
+ .player .player-image img{
+     width: 300px;
+     height: 256px;
+     
+ }
+ .player .player-profile{
+    width: 300px;
+    height: 256px;
+    margin: auto;
+ }
+ .player .player-profile{}
+ .player .player-profile .player-name{
+     font-size: 28px;
+     font-weight: 600;
+     margin: 10px 0;
+     color: #18191F;
+ }
+ .player .player-profile .player-details{
+     font-size: 16px;
+     font-weight: 400;
+     color: #6C6C6C;
+     line-height: 24px;
+     
  }
